--- a/notebooks/svm.ipynb
+++ b/notebooks/svm.ipynb
@@ -30,6 +30,76 @@
     "                    {'kernel': ['linear'], 'C': [0.01, 0.1, 1]},\n",
     "                    {'kernel': ['poly'], 'C': [0.01, 0.1], 'degree': [3, 4], 'coef0': [0.1, 0.5]}]\n"
    ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 2,
+   "source": [
+    "Loading PCA data and splitting to train and evaluation set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('data/processed/mushrooms_pca.csv')\n",
+    "y = data['class']\n",
+    "X = data.drop('class', axis=1)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = \\\n",
+    "        train_test_split(X, y.ravel(), test_size=.1, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(clf, tuned_parameters, scoring='f1',\n",
+    "                           cv=10, return_train_score=True, n_jobs=3)\n",
+    "grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 2,
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res=pd.DataFrame(grid_search.cv_results_).sort_values('rank_test_score').reset_index(drop=True)\n",
+    "res = res[['param_kernel', 'param_coef0', 'param_C', 'mean_test_score', 'mean_fit_time']]\n",
+    "print(res.head(n=8).to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(grid_search, open(\"models/svm.p\", \"wb\" ) )\n",
+    "y_true, y_pred = y_test, grid_search.predict(X_test)\n",
+    "grid_search\n",
+    "print(grid_search.best_params_)\n",
+    "report = classification_report(y_true, y_pred)\n",
+    "print(report)"
+   ]
   }
  ],
  "metadata": {
