Cleans notebooks and adds pca visualization scripts

--- a/notebooks/knn.ipynb
+++ b/notebooks/knn.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Nearest Neighbour\n",
+    "\n",
+    "This notebook can be used to find the optimal parameter for the k-nn algorithm. It can also be used to plot visualisations of this process and a confusion matrix of the best estimator.\n",
+    "\n",
+    "A copy of the grid search algorithm can be found in `src/models/knn.py`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -126,7 +137,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(clf, open( \"../models/knn-7.p\", \"wb\" ) )"
+    "pickle.dump(clf, open( \"../models/knn-high-res.p\", \"wb\" ) )"
    ]
   },
   {
@@ -469,85 +480,6 @@
    "source": [
     "conf_mat"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>val</th>\n",
-       "      <th>cat_a</th>\n",
-       "      <th>cat_b</th>\n",
-       "      <th>cat_c</th>\n",
-       "      <th>cat_d</th>\n",
-       "      <th>cat2_a</th>\n",
-       "      <th>cat2_b</th>\n",
-       "      <th>cat2_c</th>\n",
-       "      <th>cat2_d</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   val  cat_a  cat_b  cat_c  cat_d  cat2_a  cat2_b  cat2_c  cat2_d\n",
-       "0    1      0      1      0      0       0       0       1       0"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "dfA = pd.DataFrame({'cat':['a','b','c','d'],'cat2':['a','b','c','d'],'val':[1,2,5,10]})\n",
-    "dfB = pd.get_dummies(pd.DataFrame({'cat':['b'],'cat2':['c'],'val':[1]}))\n",
-    "dummies_frame = pd.get_dummies(dfA)\n",
-    "dfB.reindex(columns = dummies_frame.columns, fill_value=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
