--- a/notebooks/random forest.ipynb
+++ b/notebooks/random forest.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Random Forest\n",
+    "\n",
+    "This notebook can be used to find the optimal parameters for the random forest algorithm. It can also be used produce LaTeX tables and a confusion matrix of the best estimator.\n",
+    "\n",
+    "A copy of the grid search algorithm can be found in `src/models/rf.py`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load Data"
    ]
   },
@@ -61,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get a dataframe with all RF parameters and the f1 score associated with it.\n",
     "def get_param_df(results):\n",
     "    lines = []\n",
     "    for _,r in results.iterrows():\n",
@@ -986,413 +998,6 @@
    "source": [
     "conf_mat"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>74</th>\n",
-       "      <th>75</th>\n",
-       "      <th>76</th>\n",
-       "      <th>77</th>\n",
-       "      <th>78</th>\n",
-       "      <th>79</th>\n",
-       "      <th>80</th>\n",
-       "      <th>81</th>\n",
-       "      <th>82</th>\n",
-       "      <th>83</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.243738</td>\n",
-       "      <td>0.169633</td>\n",
-       "      <td>0.187271</td>\n",
-       "      <td>1.376409</td>\n",
-       "      <td>-0.106942</td>\n",
-       "      <td>-0.878097</td>\n",
-       "      <td>-0.210952</td>\n",
-       "      <td>-0.687473</td>\n",
-       "      <td>-1.018611</td>\n",
-       "      <td>-0.662291</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.441639</td>\n",
-       "      <td>0.042792</td>\n",
-       "      <td>-0.063609</td>\n",
-       "      <td>-0.120454</td>\n",
-       "      <td>0.507655</td>\n",
-       "      <td>0.023254</td>\n",
-       "      <td>0.222428</td>\n",
-       "      <td>-0.262144</td>\n",
-       "      <td>-0.048115</td>\n",
-       "      <td>0.100873</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.571371</td>\n",
-       "      <td>-0.396568</td>\n",
-       "      <td>0.453902</td>\n",
-       "      <td>-0.311216</td>\n",
-       "      <td>-1.197749</td>\n",
-       "      <td>0.324961</td>\n",
-       "      <td>-0.004409</td>\n",
-       "      <td>-0.342539</td>\n",
-       "      <td>-0.375380</td>\n",
-       "      <td>0.408702</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.352448</td>\n",
-       "      <td>-0.049725</td>\n",
-       "      <td>0.265986</td>\n",
-       "      <td>-0.026997</td>\n",
-       "      <td>0.042791</td>\n",
-       "      <td>-0.083705</td>\n",
-       "      <td>-0.486171</td>\n",
-       "      <td>-0.114538</td>\n",
-       "      <td>0.410431</td>\n",
-       "      <td>-0.284866</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.011710</td>\n",
-       "      <td>0.712847</td>\n",
-       "      <td>-0.750129</td>\n",
-       "      <td>-0.960438</td>\n",
-       "      <td>-0.482845</td>\n",
-       "      <td>-1.151565</td>\n",
-       "      <td>0.035126</td>\n",
-       "      <td>0.225844</td>\n",
-       "      <td>0.366011</td>\n",
-       "      <td>0.077844</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.366079</td>\n",
-       "      <td>-0.188762</td>\n",
-       "      <td>0.210489</td>\n",
-       "      <td>0.006704</td>\n",
-       "      <td>0.176389</td>\n",
-       "      <td>0.223179</td>\n",
-       "      <td>0.171282</td>\n",
-       "      <td>0.003131</td>\n",
-       "      <td>-0.259227</td>\n",
-       "      <td>-0.067332</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.582489</td>\n",
-       "      <td>-0.780651</td>\n",
-       "      <td>1.257254</td>\n",
-       "      <td>-0.378224</td>\n",
-       "      <td>0.070664</td>\n",
-       "      <td>-0.385106</td>\n",
-       "      <td>0.960738</td>\n",
-       "      <td>-1.132339</td>\n",
-       "      <td>-0.243777</td>\n",
-       "      <td>-0.334009</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.312745</td>\n",
-       "      <td>-0.489868</td>\n",
-       "      <td>0.084006</td>\n",
-       "      <td>0.331273</td>\n",
-       "      <td>-0.240141</td>\n",
-       "      <td>0.242239</td>\n",
-       "      <td>0.228877</td>\n",
-       "      <td>-0.268884</td>\n",
-       "      <td>-0.078804</td>\n",
-       "      <td>-0.339742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.534264</td>\n",
-       "      <td>0.601503</td>\n",
-       "      <td>1.705691</td>\n",
-       "      <td>-0.109213</td>\n",
-       "      <td>0.405468</td>\n",
-       "      <td>0.472674</td>\n",
-       "      <td>-0.394598</td>\n",
-       "      <td>-0.405106</td>\n",
-       "      <td>0.541237</td>\n",
-       "      <td>1.374447</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.153536</td>\n",
-       "      <td>-0.014964</td>\n",
-       "      <td>0.052490</td>\n",
-       "      <td>0.104576</td>\n",
-       "      <td>0.261490</td>\n",
-       "      <td>0.152714</td>\n",
-       "      <td>0.093212</td>\n",
-       "      <td>0.101715</td>\n",
-       "      <td>0.029535</td>\n",
-       "      <td>-0.002264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-1.204925</td>\n",
-       "      <td>0.884577</td>\n",
-       "      <td>-0.394593</td>\n",
-       "      <td>-0.503846</td>\n",
-       "      <td>-0.251984</td>\n",
-       "      <td>-0.343648</td>\n",
-       "      <td>-0.294517</td>\n",
-       "      <td>-0.046666</td>\n",
-       "      <td>-0.096009</td>\n",
-       "      <td>-0.005519</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.191728</td>\n",
-       "      <td>-0.481568</td>\n",
-       "      <td>0.260171</td>\n",
-       "      <td>-0.742385</td>\n",
-       "      <td>0.139754</td>\n",
-       "      <td>0.116191</td>\n",
-       "      <td>-0.568823</td>\n",
-       "      <td>-0.259215</td>\n",
-       "      <td>0.364157</td>\n",
-       "      <td>-0.107321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.337115</td>\n",
-       "      <td>0.585181</td>\n",
-       "      <td>0.052322</td>\n",
-       "      <td>-0.439883</td>\n",
-       "      <td>0.592823</td>\n",
-       "      <td>-0.591784</td>\n",
-       "      <td>0.196912</td>\n",
-       "      <td>-0.696469</td>\n",
-       "      <td>-0.883731</td>\n",
-       "      <td>-0.502377</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.439050</td>\n",
-       "      <td>-0.195000</td>\n",
-       "      <td>0.331904</td>\n",
-       "      <td>-0.056237</td>\n",
-       "      <td>0.210434</td>\n",
-       "      <td>0.069898</td>\n",
-       "      <td>-0.397399</td>\n",
-       "      <td>-0.101941</td>\n",
-       "      <td>0.298627</td>\n",
-       "      <td>-0.350048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>-0.462326</td>\n",
-       "      <td>-0.088980</td>\n",
-       "      <td>0.838394</td>\n",
-       "      <td>0.756321</td>\n",
-       "      <td>-0.680890</td>\n",
-       "      <td>-1.515351</td>\n",
-       "      <td>-0.060695</td>\n",
-       "      <td>-0.099490</td>\n",
-       "      <td>-0.523774</td>\n",
-       "      <td>-0.452852</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.065353</td>\n",
-       "      <td>-0.058422</td>\n",
-       "      <td>-0.102397</td>\n",
-       "      <td>0.297188</td>\n",
-       "      <td>-0.112980</td>\n",
-       "      <td>0.162091</td>\n",
-       "      <td>0.523398</td>\n",
-       "      <td>-0.090301</td>\n",
-       "      <td>-0.206897</td>\n",
-       "      <td>0.179758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-1.272053</td>\n",
-       "      <td>0.668870</td>\n",
-       "      <td>-0.470649</td>\n",
-       "      <td>1.165287</td>\n",
-       "      <td>-0.314027</td>\n",
-       "      <td>-0.300755</td>\n",
-       "      <td>0.542034</td>\n",
-       "      <td>-0.709432</td>\n",
-       "      <td>-0.364770</td>\n",
-       "      <td>-0.049232</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.159938</td>\n",
-       "      <td>0.418124</td>\n",
-       "      <td>-0.478721</td>\n",
-       "      <td>-0.080912</td>\n",
-       "      <td>0.032135</td>\n",
-       "      <td>0.018549</td>\n",
-       "      <td>0.184515</td>\n",
-       "      <td>-0.267636</td>\n",
-       "      <td>0.124479</td>\n",
-       "      <td>-0.314951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.395281</td>\n",
-       "      <td>0.239368</td>\n",
-       "      <td>0.434368</td>\n",
-       "      <td>-0.667229</td>\n",
-       "      <td>-0.949681</td>\n",
-       "      <td>0.228731</td>\n",
-       "      <td>-0.372862</td>\n",
-       "      <td>-0.874304</td>\n",
-       "      <td>-0.429802</td>\n",
-       "      <td>-0.171727</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.177853</td>\n",
-       "      <td>-0.241379</td>\n",
-       "      <td>0.149066</td>\n",
-       "      <td>-0.044175</td>\n",
-       "      <td>0.189669</td>\n",
-       "      <td>0.146438</td>\n",
-       "      <td>-0.284725</td>\n",
-       "      <td>-0.093229</td>\n",
-       "      <td>0.127044</td>\n",
-       "      <td>-0.256531</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10 rows × 84 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         0         1         2         3         4         5         6   \\\n",
-       "0  0.243738  0.169633  0.187271  1.376409 -0.106942 -0.878097 -0.210952   \n",
-       "1  1.571371 -0.396568  0.453902 -0.311216 -1.197749  0.324961 -0.004409   \n",
-       "2  0.011710  0.712847 -0.750129 -0.960438 -0.482845 -1.151565  0.035126   \n",
-       "3 -0.582489 -0.780651  1.257254 -0.378224  0.070664 -0.385106  0.960738   \n",
-       "4 -0.534264  0.601503  1.705691 -0.109213  0.405468  0.472674 -0.394598   \n",
-       "5 -1.204925  0.884577 -0.394593 -0.503846 -0.251984 -0.343648 -0.294517   \n",
-       "6  1.337115  0.585181  0.052322 -0.439883  0.592823 -0.591784  0.196912   \n",
-       "7 -0.462326 -0.088980  0.838394  0.756321 -0.680890 -1.515351 -0.060695   \n",
-       "8 -1.272053  0.668870 -0.470649  1.165287 -0.314027 -0.300755  0.542034   \n",
-       "9  1.395281  0.239368  0.434368 -0.667229 -0.949681  0.228731 -0.372862   \n",
-       "\n",
-       "         7         8         9     ...           74        75        76  \\\n",
-       "0 -0.687473 -1.018611 -0.662291    ...    -0.441639  0.042792 -0.063609   \n",
-       "1 -0.342539 -0.375380  0.408702    ...     0.352448 -0.049725  0.265986   \n",
-       "2  0.225844  0.366011  0.077844    ...     0.366079 -0.188762  0.210489   \n",
-       "3 -1.132339 -0.243777 -0.334009    ...    -0.312745 -0.489868  0.084006   \n",
-       "4 -0.405106  0.541237  1.374447    ...     0.153536 -0.014964  0.052490   \n",
-       "5 -0.046666 -0.096009 -0.005519    ...     0.191728 -0.481568  0.260171   \n",
-       "6 -0.696469 -0.883731 -0.502377    ...     0.439050 -0.195000  0.331904   \n",
-       "7 -0.099490 -0.523774 -0.452852    ...     0.065353 -0.058422 -0.102397   \n",
-       "8 -0.709432 -0.364770 -0.049232    ...    -0.159938  0.418124 -0.478721   \n",
-       "9 -0.874304 -0.429802 -0.171727    ...     0.177853 -0.241379  0.149066   \n",
-       "\n",
-       "         77        78        79        80        81        82        83  \n",
-       "0 -0.120454  0.507655  0.023254  0.222428 -0.262144 -0.048115  0.100873  \n",
-       "1 -0.026997  0.042791 -0.083705 -0.486171 -0.114538  0.410431 -0.284866  \n",
-       "2  0.006704  0.176389  0.223179  0.171282  0.003131 -0.259227 -0.067332  \n",
-       "3  0.331273 -0.240141  0.242239  0.228877 -0.268884 -0.078804 -0.339742  \n",
-       "4  0.104576  0.261490  0.152714  0.093212  0.101715  0.029535 -0.002264  \n",
-       "5 -0.742385  0.139754  0.116191 -0.568823 -0.259215  0.364157 -0.107321  \n",
-       "6 -0.056237  0.210434  0.069898 -0.397399 -0.101941  0.298627 -0.350048  \n",
-       "7  0.297188 -0.112980  0.162091  0.523398 -0.090301 -0.206897  0.179758  \n",
-       "8 -0.080912  0.032135  0.018549  0.184515 -0.267636  0.124479 -0.314951  \n",
-       "9 -0.044175  0.189669  0.146438 -0.284725 -0.093229  0.127044 -0.256531  \n",
-       "\n",
-       "[10 rows x 84 columns]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_ten = X[:10,]\n",
-    "pd.DataFrame(first_ten)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Random scribblings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max_depth\n",
-      "10.0    -0.591961\n",
-      "50.0    -0.542059\n",
-      "100.0   -0.550178\n",
-      "Name: score, dtype: float64\n",
-      "min_samples_split\n",
-      "2    -0.567002\n",
-      "5    -0.557997\n",
-      "10   -0.555188\n",
-      "Name: score, dtype: float64\n",
-      "n_estimators\n",
-      "10    -0.625875\n",
-      "50    -0.534197\n",
-      "100   -0.520114\n",
-      "Name: score, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "btrue = params_time[params_time['bootstrap'] == True]\n",
-    "print(btrue.groupby(['max_depth'])['score'].mean())\n",
-    "print(btrue.groupby(['min_samples_split'])['score'].mean())\n",
-    "print(btrue.groupby(['n_estimators'])['score'].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
