Add final plots and model comparison.

--- a/notebooks/random forest — high res.ipynb
+++ b/notebooks/random forest — high res.ipynb
@@ -17,7 +17,10 @@
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import roc_curve, accuracy_score, auc, roc_auc_score, classification_report, f1_score\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -28,19 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.24373845,  0.16963259,  0.18727096, ..., -0.2621439 ,\n",
-       "        -0.04811481,  0.10087257],\n",
-       "       [ 1.5713711 , -0.39656834,  0.45390158, ..., -0.11453773,\n",
-       "         0.41043087, -0.28486641],\n",
-       "       [ 0.01171017,  0.71284725, -0.7501287 , ...,  0.00313137,\n",
-       "        -0.25922659, -0.06733154],\n",
-       "       ...,\n",
-       "       [-0.89697748, -0.1697835 ,  0.3055329 , ...,  0.53583814,\n",
-       "         0.06813399, -0.06614521],\n",
-       "       [-1.88993255, -0.39236622, -0.58529202, ...,  0.1682014 ,\n",
-       "         0.37251319, -0.41726506],\n",
-       "       [ 0.66668421,  0.4509778 , -0.09989701, ..., -0.18299176,\n",
-       "        -0.0747118 , -0.36911983]])"
+       "array([[ 0.24373845,  0.16963259,  0.18727096, ..., -0.2621439 ,\n        -0.04811481,  0.10087257],\n       [ 1.5713711 , -0.39656834,  0.45390158, ..., -0.11453773,\n         0.41043087, -0.28486641],\n       [ 0.01171017,  0.71284725, -0.7501287 , ...,  0.00313137,\n        -0.25922659, -0.06733154],\n       ...,\n       [-0.89697748, -0.1697835 ,  0.3055329 , ...,  0.53583814,\n         0.06813399, -0.06614521],\n       [-1.88993255, -0.39236622, -0.58529202, ...,  0.1682014 ,\n         0.37251319, -0.41726506],\n       [ 0.66668421,  0.4509778 , -0.09989701, ..., -0.18299176,\n        -0.0747118 , -0.36911983]])"
       ]
      },
      "execution_count": 4,
@@ -49,7 +40,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/processed/mushrooms_pca.csv')\n",
+    "df = pd.read_csv('data/processed/mushrooms_pca.csv')\n",
     "y = df['class']\n",
     "X = df.drop(columns=['class']).values\n",
     "X.view()"
@@ -80,19 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n_estimators': [10, 100, 200, 400, 600, 800, 1000, 1200, 1400],\n",
-       " 'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, None],\n",
-       " 'min_samples_split': [2, 5, 10],\n",
-       " 'min_samples_leaf': [1, 2, 4]}"
+       "{'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, None],\n 'min_samples_leaf': [1, 2, 4],\n 'min_samples_split': [2, 5, 10],\n 'n_estimators': [10, 100, 200, 400, 600, 800, 1000, 1200, 1400]}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,22 +880,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-      "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "            min_samples_leaf=1, min_samples_split=3,\n",
-      "            min_weight_fraction_leaf=0.0, n_estimators=2000, n_jobs=None,\n",
-      "            oob_score=False, random_state=None, verbose=0,\n",
-      "            warm_start=False)\n",
-      "0.8076609162889906\n"
-     ]
+     "ename": "NameError",
+     "evalue": "name 'rf_grid' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-0ea4f8f94616>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrf_grid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrf_grid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_score_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rf_grid' is not defined"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -1348,10 +1333,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = \\\n",
+    "        train_test_split(X, y.ravel(), test_size=.1, random_state=42)\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84179104 0.83976261 0.85       0.83159463 0.86842105 0.85337243\n 0.86303387 0.83763278 0.85337243 0.85067873]\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 3, 'n_estimators': 2000}\n",
+    "clf =RandomForestClassifier(max_depth=None, min_samples_leaf=1,min_samples_split=3, n_estimators=2000)\n",
+    "clf.fit(X_train, y_train)\n",
+    "scores = cross_val_score(clf, X_train, y_train, cv=10, scoring='f1')\n",
+    "print(scores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84179104 0.83976261 0.85       0.83159463 0.86842105 0.85337243\n 0.86303387 0.83763278 0.85337243 0.85067873]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8547945205479454"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(scores)\n",
+    "y_true, y_pred= y_test, clf.predict(X_test)\n",
+    "f1_score(y_true, y_pred)"
+   ]
   },
   {
    "cell_type": "code",
