--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_curve, accuracy_score, auc, roc_auc_score, classification_report\n",
+    "from sklearn.metrics import roc_curve, accuracy_score, auc, confusion_matrix, classification_report\n",
     "import matplotlib.pyplot as plt\n"
    ]
   },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
     "knn = pickle.load(open(\"models/knn-high-res.p\", \"rb\"))\n",
     "rf = pickle.load(open(\"models/rf-grid-search.p\", \"rb\"))\n",
     "svm = pickle.load(open(\"models/svm.p\", \"rb\"))\n",
-    "nn = pickle.load(open(\"models/nn.p\", \"rb\"))"
+    "nn = pickle.load(open(\"models/nn.p\", \"rb\"))\n"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_neighbors': 29}\n{'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 3, 'n_estimators': 2000}\n{'C': 1, 'kernel': 'linear'}\n{'alpha': 0.1, 'hidden_layer_sizes': (50,), 'max_iter': 100}\n"
+      "{'n_neighbors': 25}\n{'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 3, 'n_estimators': 2000}\n{'C': 1, 'kernel': 'linear'}\n{'alpha': 0.1, 'hidden_layer_sizes': (50,), 'max_iter': 100}\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n\n           0       0.87      0.92      0.89       433\n           1       0.90      0.84      0.87       380\n\n   micro avg       0.88      0.88      0.88       813\n   macro avg       0.89      0.88      0.88       813\nweighted avg       0.88      0.88      0.88       813\n\n0.8831488314883149\n              precision    recall  f1-score   support\n\n           0       1.00      1.00      1.00       433\n           1       1.00      1.00      1.00       380\n\n   micro avg       1.00      1.00      1.00       813\n   macro avg       1.00      1.00      1.00       813\nweighted avg       1.00      1.00      1.00       813\n\n1.0\n              precision    recall  f1-score   support\n\n           0       0.88      0.88      0.88       433\n           1       0.87      0.87      0.87       380\n\n   micro avg       0.87      0.87      0.87       813\n   macro avg       0.87      0.87      0.87       813\nweighted avg       0.87      0.87      0.87       813\n\n0.8745387453874539\n              precision    recall  f1-score   support\n\n           0       0.92      0.91      0.91       433\n           1       0.90      0.91      0.90       380\n\n   micro avg       0.91      0.91      0.91       813\n   macro avg       0.91      0.91      0.91       813\nweighted avg       0.91      0.91      0.91       813\n\n0.9077490774907749\n"
+      "[[385  48]\n [ 73 307]]\n              precision    recall  f1-score   support\n\n           0       0.84      0.89      0.86       433\n           1       0.86      0.81      0.84       380\n\n   micro avg       0.85      0.85      0.85       813\n   macro avg       0.85      0.85      0.85       813\nweighted avg       0.85      0.85      0.85       813\n\n0.8511685116851169\n[[395  38]\n [ 68 312]]\n              precision    recall  f1-score   support\n\n           0       0.85      0.91      0.88       433\n           1       0.89      0.82      0.85       380\n\n   micro avg       0.87      0.87      0.87       813\n   macro avg       0.87      0.87      0.87       813\nweighted avg       0.87      0.87      0.87       813\n\n0.8696186961869619\n[[382  51]\n [ 51 329]]\n              precision    recall  f1-score   support\n\n           0       0.88      0.88      0.88       433\n           1       0.87      0.87      0.87       380\n\n   micro avg       0.87      0.87      0.87       813\n   macro avg       0.87      0.87      0.87       813\nweighted avg       0.87      0.87      0.87       813\n\n0.8745387453874539\n[[394  39]\n [ 36 344]]\n              precision    recall  f1-score   support\n\n           0       0.92      0.91      0.91       433\n           1       0.90      0.91      0.90       380\n\n   micro avg       0.91      0.91      0.91       813\n   macro avg       0.91      0.91      0.91       813\nweighted avg       0.91      0.91      0.91       813\n\n0.9077490774907749\n"
      ]
     }
    ],
@@ -128,6 +128,7 @@
     "    reports[classifier] = classification_report(y_true, y_pred)\n",
     "    fprs[classifier], tprs[classifier], _ = roc_curve(y_test, y_pred, pos_label=1)\n",
     "    roc_aucs[classifier] = auc(fprs[classifier], tprs[classifier])\n",
+    "    print(confusion_matrix(y_true, y_pred))\n",
     "    print(reports[classifier])\n",
     "    print(accuracy_score(y_true, y_pred))\n"
    ]
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
